--- a/server/HotCit/HotCit/HotCit.csproj
+++ b/server/HotCit/HotCit/HotCit.csproj
@@ -82,8 +82,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AbstractServer.cs" />
+    <Compile Include="Abilities.cs" />
+    <Compile Include="Character.cs" />
     <Compile Include="Data.cs" />
     <Compile Include="Game.cs" />
+    <Compile Include="Player.cs" />
     <Compile Include="Requests.cs" />
     <Compile Include="Repositories.cs" />
     <Compile Include="Global.asax.cs">
@@ -92,8 +95,10 @@
     <Compile Include="Interfaces.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources.cs" />
+    <Compile Include="RevealStrategies.cs" />
     <Compile Include="Servers.cs" />
-    <Compile Include="UserGameFactory.cs" />
+    <Compile Include="GameSetup.cs" />
+    <Compile Include="Stubs.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
