--- a/server/HotCit/HotCit/HotCit.csproj
+++ b/server/HotCit/HotCit/HotCit.csproj
@@ -98,6 +98,7 @@
     <Compile Include="RevealStrategies.cs" />
     <Compile Include="Servers.cs" />
     <Compile Include="GameSetup.cs" />
+    <Compile Include="Strategies.cs" />
     <Compile Include="Stubs.cs" />
   </ItemGroup>
   <ItemGroup>
