--- a/server/HotCit/HotCit/HotCit.csproj
+++ b/server/HotCit/HotCit/HotCit.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Abilities.cs" />
     <Compile Include="Character.cs" />
     <Compile Include="Data.cs" />
+    <Compile Include="Exceptions.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="Player.cs" />
     <Compile Include="Requests.cs" />
@@ -96,6 +97,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources.cs" />
     <Compile Include="RevealStrategies.cs" />
+    <Compile Include="SelectStrategies.cs" />
     <Compile Include="Servers.cs" />
     <Compile Include="GameSetup.cs" />
     <Compile Include="Strategies.cs" />
