--- a/server/HotCit/HotCit/HotCit.csproj
+++ b/server/HotCit/HotCit/HotCit.csproj
@@ -81,28 +81,28 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Data\Character.cs" />
     <Compile Include="Data\Districts.cs" />
+    <Compile Include="Data\Player.cs" />
+    <Compile Include="Lobby\GameSetup.cs" />
     <Compile Include="Server\AbstractServer.cs" />
-    <Compile Include="Abilities.cs" />
-    <Compile Include="Character.cs" />
     <Compile Include="Data\Data.cs" />
-    <Compile Include="Exceptions.cs" />
     <Compile Include="Game.cs" />
-    <Compile Include="Player.cs" />
     <Compile Include="Data\Requests.cs" />
-    <Compile Include="Repositories.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Interfaces.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Resources.cs" />
-    <Compile Include="RevealStrategies.cs" />
-    <Compile Include="SelectStrategies.cs" />
+    <Compile Include="Server\Repositories.cs" />
     <Compile Include="Server\Servers.cs" />
-    <Compile Include="GameSetup.cs" />
-    <Compile Include="Strategies.cs" />
+    <Compile Include="Strategies\Abilities.cs" />
+    <Compile Include="Strategies\RevealStrategies.cs" />
+    <Compile Include="Strategies\SelectStrategies.cs" />
+    <Compile Include="Strategies\Strategies.cs" />
     <Compile Include="Test\Stubs.cs" />
+    <Compile Include="Util\HotException.cs" />
+    <Compile Include="Util\Resources.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
