Partial game content

--- a/server/HotCit/HotCit/HotCit.csproj
+++ b/server/HotCit/HotCit/HotCit.csproj
@@ -95,6 +95,7 @@
     </Compile>
     <Compile Include="Interfaces.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Server\BlockingGameListener.cs" />
     <Compile Include="Server\Repositories.cs" />
     <Compile Include="Server\Servers.cs" />
     <Compile Include="Strategies\Abilities.cs" />
