updated ignore to exclude some latex files

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,15 @@
 #################
+## Latex
+#################
+
+*.aux
+*.blg
+*.bbl
+*.log
+*.out
+*.tox
+
+#################
 ## Eclipse
 #################
 
