--- a/server/HotCit/HotCit/Web.config
+++ b/server/HotCit/HotCit/Web.config
@@ -14,6 +14,7 @@
     <compilation debug="true"/>
   </system.web>
   <system.webServer>
+    <validation validateIntegratedModeConfiguration="false"/>
     <handlers>
       <add path="*" name="ServiceStack.Factory" type="ServiceStack.WebHost.Endpoints.ServiceStackHttpHandlerFactory, ServiceStack" verb="*" preCondition="integratedMode" resourceType="Unspecified" allowPathInfo="true"/>
     </handlers>
