--- a/server/HotCit_v2/package.json
+++ b/server/HotCit_v2/package.json
@@ -3,6 +3,8 @@
     "version": "0.0.1",
     "dependencies": {
         "express": "3.x",
-        "ws": "0.4.x"
+        "ws": "0.4.x",
+        "async": "0.2.9",
+        "array-sugar": "0.2.4"
     }
 }
